# datalock

./: .gitignore  README.md  contributors.txt  pyproject.toml
delta/: GR_data.ods
docs/: index.html
examples/: dataKaonsNeutral.csv  dataPions.csv  example1.py  example2.py  example3.py
experiments/: plotAlphaQED.py  plotBESIIIdata.py  plotBaBardata.py  plotCLEOdata.py  plotCMD-2data.py  plotCSbare.py  plotDeltaAlphaQED.py  plotKLOEdata.py  plotSNDdata.py
experiments/data/: dataAlphaQED.csv  dataBESIII.csv  dataBaBar.csv  dataCLEO.csv  dataCMD-2.csv  dataCSbare.csv  dataDeltaAlphaQED.csv  dataKLOE.csv  dataSND.csv
experiments/dev/: outFile.csv
hyperons/: dataHyperons.ods
kaons/: dataBESIII.csv  dataBaBar.csv  dataCMD.csv  dataKaons.ods  dataSND.csv  dataSpaceLike.csv
mesons/: dataEEforRhos.csv  dataEta.csv  dataEtaPrime.csv  dataPiZero.csv  dataPiZeroNoBB.csv
neutrinos/: dataQECC.csv  neutrinos.ods
nucleons/: dataMainz.ods  dataMainzG.csv  dataMainzRatio.csv  dataMainzSigma.csv  dataNeutronCS.csv  dataNeutronElectric.csv  dataNeutronMagnetic.csv  dataNeutronRatios.csv  dataNeutronTimeLike.csv  dataNucleons.ods  dataPRadSigma.csv  dataProtonCC.csv  dataProtonCS.csv  dataProtonCS2.csv  dataProtonElectric.csv  dataProtonMagnetic.csv  dataProtonRatios.csv  dataProtonRatiosTimeLike.csv  dataProtonTimeLike.csv
pions/: dataBESIII.csv  dataBaBar.csv  dataBaBar12GeV.csv  dataBaBar1GeV.csv  dataCLEO.csv  dataCMD-2.csv  dataKLOE.csv  dataPi3.csv  dataPi3Squared.csv  dataPions.ods  dataSND.csv  dataTau.csv  dataTau.ods  dataTauRooted.csv  dataTauWeak.csv
pions/phaseShift/: phaseShiftD-GKPY.csv  phaseShiftP-GKPY.csv  phaseShiftP-Kaminski-long.csv  phaseShiftP-Kaminski-mid.csv  phaseShiftP-Kaminski-mid2.csv  phaseShiftP-Kaminski-short.csv  phaseShiftP-Protopopescu.csv  phaseShiftS-GKPY.csv  phaseShiftS-Kaminski.csv  phaseShiftS-Protopopescu.csv
src/: data_sources.csv  data_types.csv  experimentalData.py
src/datalock/: data_sources.csv  data_types.csv  experimentalData.py
tests/: test_data.py
