[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalock"
version = "1.0.0"
authors = [{name = "Erik Bartoš", email = "erik.bartos@gmail.com"}]
description = "World experimental data for selected physical processes."
readme = "README.md"
keywords = ["data", "cvs"]
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "PyQt5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
# license = "MIT"
license-files = [ "LICENSE" ]

[project.urls]
Repository = "https://github.com/Mezek/datalock"
Issues = "https://github.com/Mezek/datalock/issues"
